tests/NormalTests/paczka1/small_fuzzy/15036806.err
Error in line 3: spSveroEJ A882 93,3
Error in line 6: spSveroEJ A31 64,4
Error in line 10: 8fHmtB1Nl S641 103,36
Error in line 7: spSveroEJ A275 94,2
Error in line 1: 8fHmtB1Nl S641 22,0
Error in line 12: 8fHmtB1Nl A275 33,3
Error in line 11: spSveroEJ A31 96,6
